--- a/apps/agentstack-ui/src/components/Sidebar/Sidebar.module.scss
+++ b/apps/agentstack-ui/src/components/Sidebar/Sidebar.module.scss
@@ -42,13 +42,18 @@ $padding: $spacing-05;
   margin-inline: -$padding;
   min-inline-size: 0;
   min-block-size: 0;
-  overflow: hidden;
+
+  .isAnimating & {
+    overflow: hidden;
+  }
 }
 
 .bodyContent {
-  display: grid;
-  grid-template-rows: max-content 1fr;
-  row-gap: $spacing-07;
+  --row-gap: #{$spacing-07};
+
+  display: flex;
+  flex-direction: column;
+  row-gap: var(--row-gap);
   inline-size: calc(var(--sidebar-width) - 2 * $padding);
   min-inline-size: 0;
   min-block-size: 0;
@@ -65,5 +70,16 @@ $padding: $spacing-05;
 }
 
 .agentsNav {
-  --nav-group-max-height: #{(5 * rem(32px)) + (4 * $spacing-02)};
+  max-block-size: calc(70% - (var(--row-gap) / 2));
+}
+
+.recentlyUsed {
+  flex: 1 1 0;
+}
+
+.separator {
+  inline-size: 100%;
+  border: 0 solid $border-subtle-00;
+  border-block-start-width: 1px;
+  margin: 0;
 }
