--- a/apps/agentstack-ui/src/components/Sidebar/UserAvatar.module.scss
+++ b/apps/agentstack-ui/src/components/Sidebar/UserAvatar.module.scss
@@ -10,4 +10,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  &:global(.cds--icon--skeleton) {
+    margin: rem(-1px);
+    overflow: hidden;
+  }
 }
