--- a/apps/agentstack-ui/src/components/Sidebar/Sidebar.module.scss
+++ b/apps/agentstack-ui/src/components/Sidebar/Sidebar.module.scss
@@ -48,12 +48,7 @@ $padding: $spacing-05;
   }
 }
 
-.bodyContent {
-  --row-gap: #{$spacing-07};
-
-  display: flex;
-  flex-direction: column;
-  row-gap: var(--row-gap);
+.mainContent {
   inline-size: calc(var(--sidebar-width) - 2 * $padding);
   min-inline-size: 0;
   min-block-size: 0;
@@ -67,14 +62,6 @@ $padding: $spacing-05;
     visibility: hidden;
     transition-timing-function: motion(entrance, expressive);
   }
-}
-
-.agentsNav {
-  max-block-size: calc(70% - (var(--row-gap) / 2));
-}
-
-.recentlyUsed {
-  flex: 1 1 0;
 }
 
 .separator {
