feat(ui): render Markdown syntax inside trajectories
Signed-off-by: Petr Bulánek <bulanek.petr@gmail.com>

--- a/apps/agentstack-ui/src/components/LineClampText/LineClampText.module.scss
+++ b/apps/agentstack-ui/src/components/LineClampText/LineClampText.module.scss
@@ -16,6 +16,12 @@
   @include line-clamp(0);
 }
 
+.sentinel {
+  display: block;
+  inline-size: 1px;
+  block-size: 1px;
+}
+
 .button {
   display: flex;
   align-items: flex-start;
